--- a/Ignite_React/01-github-explorer/package.json
+++ b/Ignite_React/01-github-explorer/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
+    "@types/react-dom": "^18.0.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
